# devtec

./: CMakeLists.txt
include/: stringLib.h
src/: main.c  stringLib.c  test.c
